test_regress/t/t_dynarray_bad.out
%Warning-WIDTH: t/t_dynarray_bad.v:15:11: Operator NEWDYNAMIC expects 32 bits on the new() size, but new() size's VARREF 's' generates 64 bits.
                                        : ... In instance t
      a = new [s];   
          ^~~
                ... Use "/* verilator lint_off WIDTH */" and lint_on around source to disable this message.
%Error: Internal Error: ../V3Number.cpp:#: Number operation called with non-logic (double or string) argument: '"str""
